@@ -36,6 +36,7 @@ Changes for 3.0.5rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-10797] fixed evaluation of user macros in calculated items (Andris)
 
 --------------------------------------------------------------------------------
 Changes for 3.0.4
